setting up sql database

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ attrs==25.1.0
 frozenlist==1.5.0
 idna==3.10
 multidict==6.1.0
+mysql-connector-python==9.2.0
 propcache==0.2.1
 py-cord==2.6.1
 python-dotenv==1.0.1
