--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.12
-aiosignal==1.3.2
-attrs==25.1.0
-frozenlist==1.5.0
-idna==3.10
-multidict==6.1.0
-mysql-connector-python==9.2.0
-propcache==0.2.1
-py-cord==2.6.1
-python-dotenv==1.0.1
-yarl==1.18.3
-openai
+aiohappyeyeballs
+aiohttp
+aiosignal
+attrs
 discord.py
+frozenlist
+idna
+multidict
+mysql-connector-python
+propcache
+py-cord
+pytest
+python-dotenv
+yarl
